# sys-sandbox

./: README.md
2019/_sh/: .gitignore  Makefile  _sh.c  cell.c  cell.h  chvec.c  chvec.h  gc.c  parse.c  parse.h  queue.c  queue.h
2019/multicat/: .gitignore  Makefile  mcat.c  nc.c
2019/nc/: .gitignore  Makefile  client.c  nc.c  server.c  sockbuf.c  sockbuf.h
2019/ping/: Cargo.toml  Makefile  README.md  ping.c  ping.cpp
2019/rping/: Cargo.toml
2019/rping/src/: main.rs
2019/rsnc/: Cargo.toml
2019/rsnc/src/: main.rs  sockbuf.rs
2019/rush/: Cargo.toml  README.md
2019/rush/src/: main.rs  parse.rs
2021/elemag-simu/: ode.jl  viz.jl
2021/pokemon/: Pipfile  pokemon.ipynb
2021/pokemon/.ipynb_checkpoints/: pokemon-checkpoint.ipynb
2021/prolog/: .gitignore  OMakefile
2021/prolog/src/: .gitignore  OMakefile  lexer.mll  parser.mly  prolog.ml  syntax.ml
2021/pyfm-example/: .gitignore  Pipfile  pyproject.toml
2022/hills/: .gitignore  Makefile  hills.cpp  tab.pl
2022/pagerank-terastal/: existing.jl  pokerank.jl  table.jl
2022/pagerank-terastal/18/: pokerank.csv  ttas.csv
2022/pagerank-terastal/existing/: pokerank.csv
2022/pagerank-terastal/wgef/: pokerank.csv  ttas.csv
2022/pagerank-terastal/woelc/: pokerank.csv  ttas.csv
2022/pagerank-terastal/wofry/: pokerank.csv  ttas.csv
2022/pagerank-terastal/wostl/: pokerank.csv  (+1 more)
2022/prtera-enhanced/: pokerank.jl  table.jl
2023/9cc/: .gitignore  9cc.c  9cc.h  9cc.s  Makefile  README.md  codegen.c  debug.c  foo.c  main.c  parse.c  syntax.ebnf  test.sh  tokenize.c  type.c
2023/montgomery-mm/: mod.cpp
(+89 files in other folders)
