[package]
name = "rsnc"
version = "0.1.0"
authors = ["Nagamine, Hideaki <1995.hnagamin@gmail.com>"]
edition = "2021"
description = "Rust Netcat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
libc = "0.2.43"
nix = "0.20.2"
