[tool.poetry]
name = "pyfm-example"
version = "0.1.0"
description = ""
authors = ["NAGAMINE Hideaki <1995.hnagamin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
